# Epitech-R-Type

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  NetworkProtocol.md  README.md  build_run_docker.sh  clean.sh  run.sh
.github/workflows/: dev.yml  doc.yml  main.yml  new_tag_main.yml  pr_main.yml  push_main.yml
Compilation/linux/: linux.cmake  run_client.sh  run_server.sh
Compilation/macos/: macos.cmake  run_client.sh  run_server.sh
Compilation/windows/: run_client.bat  run_server.bat  windows.cmake
assets/patterns/: pattern.txt  pattern1
assets/patterns/0/: pattern.txt  pattern1(nom random tqt)  pattern2
docs/: ECS.md  NetworkProtocol.md  index.md  r.tree
docs/aecs/: README.md
docs/network/: README.md
docs/rtype/: README.md
docs/topics/: aecs-readme.md  index.md  network-readme.md  rtype-readme.md  starter-topic.md
include/aecs/: AbstractComponent.hpp  Entity.hpp  InputComponent.hpp  MenuInputSystem.hpp  StaticPacketBuilder.hpp  StaticPacketParser.hpp  SystemBase.hpp  World.hpp
include/rtype/: ComponentList.hpp  EntityFactory.hpp  NetworkGlobals.hpp  RTypeClient.hpp  RTypeServer.hpp  StaticPacketParser.hpp
include/rtype/components/: AnimComponent.hpp  BlockComponent.hpp  BossComponent.hpp  BulletComponent.hpp  BulletGenComponent.hpp  ClientAdressComponent.hpp  ClientPingComponent.hpp  ClientPortComponent.hpp  CollidableComponent.hpp  DamageCollisionComponent.hpp  DifficultyComponent.hpp  DrawHealthBar.hpp  HPComponent.hpp  InvulComponent.hpp  MonsterComponent.hpp  MusicComponent.hpp  MyPlayerComponent.hpp  NetworkTagComponent.hpp  NodeComponent.hpp  ParallaxComponent.hpp  PlayerComponent.hpp  PositionComponent.hpp  PowerComponent.hpp  ShaderComponent.hpp  SpriteComponent.hpp  TagComponent.hpp  TextComponent.hpp  VelocityComponent.hpp  XPComponent.hpp
include/rtype/systems/: AnimPlayerSystem.hpp  AnimSystem.hpp  BulletSystem.hpp  ClientInputSenderSystem.hpp  ClientPingSystem.hpp  ClientServerDataHandlerSystem.hpp  ControlPlayerSystem.hpp  DamageCollisionSystem.hpp  DeleteClientSystem.hpp  InvulSystem.hpp  MonsterBullet.hpp  MonsterGenSystem.hpp  NewConnectionSystem.hpp  ParallaxSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerOnConnectionSystem.hpp  RenderSystem.hpp  ServerConnectionSystem.hpp  ServerCorrectionsSystem.hpp  ServerInputsSystem.hpp  ServerUdpSystem.hpp
include/rtype/systems/client/: ButtonSystem.hpp  ClientHealthSystem.hpp  ClientInputSenderSystem.hpp  ClientPingSystem.hpp  ClientScoreSystem.hpp  ClientServerDataHandlerSystem.cpp  ClientServerDataHandlerSystem.hpp  DamageSoundSystem.hpp  ProfilingSystem.cpp  ProfilingSystem.hpp  RenderSystem.hpp  ServerConnectionSystem.hpp
include/rtype/systems/server/: BulletGenSystem.hpp  DeleteClientSystem.hpp  MapSystem.hpp  NewConnectionSystem.hpp  (+4 more)
include/shared/: ArgParser.hpp  Menu.hpp  PacketBuilder.hpp  SFMLLoader.cpp  SFMLLoader.hpp  Utils.hpp
pong/: CMakeLists.txt
pong/include/common/: PlayerComponent.hpp
pong/include/common/ecs/: AbstractComponent.hpp  Entity.hpp  StaticPacketBuilder.hpp  StaticPacketParser.hpp  SystemBase.hpp  World.hpp
pong/include/common/network/components/: ClientAddressComponent.hpp  ClientPingComponent.hpp
pong/include/common/network/systems/: ClientInputSenderSystem.hpp  ClientPingSystem.hpp  ClientServerDataHandlerSystem.hpp  DeleteClientSystem.hpp  NewConnectionSystem.hpp  PlayerOnConnectionSystem.hpp  ServerConnectionSystem.hpp  ServerInputsSystem.hpp
pong/include/game/: EntityFactory.hpp  PongClient.hpp
pong/include/game/components/: BallComponent.hpp  InputComponent.hpp  PositionComponent.hpp  SpriteComponent.hpp  TagComponent.hpp  TextComponent.hpp  VelocityComponent.hpp
pong/include/game/systems/: AISystem.hpp  BallSystem.hpp  ButtonSystem.hpp  ControlPlayerSystem.hpp  MenuInputSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp  ScoreSystem.hpp
pong/include/server/: PongServer.hpp
pong/include/shared/: ArgParser.hpp  Menu.hpp  PacketBuilder.hpp  SFMLLoader.hpp
pong/src/common/: PlayerComponent.cpp
pong/src/common/ecs/: AbstractComponent.cpp  Entity.cpp  StaticPacketBuilder.cpp  StaticPacketParser.cpp  SystemBase.cpp  World.cpp
pong/src/common/network/components/: ClientAddressComponent.cpp
pong/src/common/network/systems/: ClientInputSenderSystem.cpp  ClientPingSystem.cpp  ClientServerDataHandlerSystem.cpp  DeleteClientSystem.cpp  NewConnectionSystem.cpp  PlayerOnConnectionSystem.cpp  ServerConnectionSystem.cpp  ServerInputsSystem.cpp
pong/src/game/: EntityFactory.cpp  PongClient.cpp  main.cpp
pong/src/game/components/: BallComponent.cpp  InputComponent.cpp  PositionComponent.cpp  SpriteComponent.cpp  TagComponent.cpp  TextComponent.cpp  VelocityComponent.cpp
pong/src/game/systems/: AISystem.cpp  BallSystem.cpp  ButtonSystem.cpp  ControlPlayerSystem.cpp  MenuInputSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  ScoreSystem.cpp
pong/src/server/: PongServer.cpp  main.cpp
pong/src/shared/: ArgParser.cpp  Menu.cpp  SFMLLoader.cpp
scripts/: clang-format-check.sh  clang-reformat.sh
shaders/: PlayerColor.frag
src/aecs/: AbstractComponent.cpp  Entity.cpp  InputComponent.cpp  MenuInputSystem.cpp  StaticPacketBuilder.cpp  StaticPacketParser.cpp  SystemBase.cpp  World.cpp
src/client/: RTypeClient.cpp  main.cpp
src/rtype/: EntityFactory.cpp  RTypeClient.cpp
src/rtype/components/: BlockComponent.cpp  BulletComponent.cpp  CollidableComponent.cpp  DamageCollisionComponent.cpp  DifficultyComponent.cpp  DrawHealthBar.hpp  HPComponent.cpp  InvulComponent.cpp  MonsterComponent.cpp  MusicComponent.cpp  NodeComponent.cpp  PlayerComponent.cpp  PositionComponent.cpp  PowerComponent.cpp  SpriteComponent.cpp  TagComponent.cpp  TextComponent.cpp  VelocityComponent.cpp  XPComponent.cpp
src/rtype/systems/: MonsterGenSystem.cpp  RenderSystem.cpp
src/server/: RTypeServer.cpp  main.cpp
src/shared/: ArgParser.cpp  Menu.cpp  PacketBuilder.cpp  main.cpp
tools/levelEditor/: CMakeLists.txt  run.sh
tools/levelEditor/include/: Editor.hpp  Window.hpp
tools/levelEditor/src/: Editor.cpp  Window.cpp  main.cpp
(+50 files in other folders)
